# swa_gaussian

./: pyproject.toml
src/swag/: utils.py
src/swag/posteriors/: swag.py
